@@ -54,3 +54,9 @@ _Description: Continue the install without loading kernel modules?
 Template: anna/retriever
 Type: string
 Description: default retriever (internal use only)
+
+Template: anna/standard_modules
+Type: boolean
+Default: true
+Description: Install standard modules?
+ This question exists only to be preseeded.
