@@ -5,6 +5,10 @@ anna (1.08) UNRELEASED; urgency=low
       queue.
     - Install kernel module udebs if the name they provide is queued, so
       that 'anna-install ext2-modules' works as expected.
+    - Add anna/standard_modules question (never asked, only for preseeding).
+      If false, udebs will not be automatically installed merely due to
+      having Priority >= standard, although Priority >= standard kernel
+      modules will still be installed. Originally Ubuntu bug #5258.
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 17:11:07 +0100
 
